<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Salario</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="txtSalario">Digite o salário:</string>
    <string name="junior">Nível Júnior (9%)</string>
    <string name="pleno">Nível Pleno (20%)</string>
    <string name="senior">Nível Sênior (31%)</string>
    <string name="calcular">Calcular</string>

</resources>
